yoshimi 1.4.x

2016-8-24 Will
* Moved current root and current bank to instance config files.
* GUI button numbers no longer shown in direct access.

2016-8-23 Will
* Separated out instance settings from main config file.
* Added GUI and CLI enable/disable to 'Switches'.
* Pushed gzip, splash, GUI enable & CLI enable into base params.
* Base params now hidden in secondary instances.

2016-8-22 Will
* Sample rate, buffer size, oscillator size now settable by first
  instance only (but visible to others).

2016-8-21 Will
* Commented out Config::showQuestionOrCmdWarning(
  never seems to be called.
* More doc updates and clarifications.

2016-8-20 Will
* Bugfix: Part change was calling for gui update before loading had
  completed :(

2016-8-18 Will
* Bugfix: If part kit items were enabled but the whole kit was 'off'
  the items were correctly saved, but not reloaded.
* Added 'Pad Kit' to 'Will_Godfrey_Companion'.
* Added missing copyright notice to some instrument patches.

2016-8-16 Will
* Loading untitled instruments now uses the filename.
* Loading "Simple Sound" changes the name to "No Title".
* User prevented from changing name *to* "Simple Sound".
* Bugfix: xml minimal had been set for patch set saves.

2016-8-15 Will
* Removed redundant (duplicated) part number settings.
* Improved vector control consistency.
* Vector data now stored in patch sets and saved state.

2016-8-14 Will
* Moved buffer size, oscillator size, sample rate into
  config BASE_PARAMETERS.

2016-8-13 Will
* Moved LV2 root/bank/program change into ringbuffer and adjusted RT
  priorites for best results when loading *huge* instrument patches.

2016-8-12 Will
* Inproved direct access to filters - Only dynfilter to do now!.
* Updated docs.
* Completed direct filter implementation.
* Updated docs (again).

2016-8-11 Will
* Bugfix: CLI wasn't loading upper set instruments (128+).
* Tidied up NRPN vector control.
* Added more error messages to 'non fatal' category.